kubernetes/apps/tools/jitsi-admin/app/httproute.yaml
---
# yaml-language-server: $schema=https://homelab-schemas-epg.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meetling
spec:
  hostnames:
    - meetling.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: jitsi-admin-application-http
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meetling-ws
spec:
  hostnames:
    - meetling-ws.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: jitsi-admin-websocket-http
          port: 3000
